import org.gradle.api.plugins.JavaPluginExtension
import org.gradle.api.plugins.quality.Checkstyle
import org.gradle.api.plugins.quality.Pmd
import org.gradle.api.tasks.testing.logging.TestExceptionFormat
import org.gradle.testing.jacoco.plugins.JacocoPluginExtension
import org.gradle.testing.jacoco.tasks.JacocoCoverageVerification
import org.gradle.testing.jacoco.tasks.JacocoReport

plugins {
    // SonarQube는 backend 루트에서만 적용 (주로 CI에서 실행)
    alias(libs.plugins.sonarqube)
    // SpotBugs 플러그인 클래스 로딩을 위해 선언 (루트 적용은 아님)
    alias(libs.plugins.spotbugs) apply false
}

// 공통 품질/버전 설정 (backend 프로젝트 기준)
def backendProject = project
ext {
    // Version Catalog에서 버전 참조 (gradle/libs.versions.toml의 [versions] 섹션)
    spotbugsVer = libs.versions.spotbugs.tool
    checkstyleVer = libs.versions.checkstyle.tool
    pmdVer = libs.versions.pmd.tool
    jacocoVer = libs.versions.jacoco.tool
    quality = [
            spotbugsVersion   : spotbugsVer.get(),
            checkstyleVersion : checkstyleVer.get(),
            pmdVersion        : pmdVer.get()
    ]
    qualityConfig = [
            checkstyleClasspath : 'google_checks.xml',             // Checkstyle 기본 제공 Google 규칙
            spotbugsExclude     : 'config/spotbugs/exclude.xml'    // 선택: SpotBugs 제외 필터
    ]
    jacocoExclusions = ['**/*Application*.class', '**/config/**', '**/dto/**']
    jacocoGlobalExcludes = (jacocoExclusions + ['**/generated/**']).unique()
    qualityGlobalExcludes = ['**/generated/**', '**/build/**']
}

// backend 이하 모든 모듈에 전역 적용
subprojects { subproject ->
    plugins.withType(JavaPlugin) {
        def strictModules = (backendProject.findProperty('strictModules') ?: '')
                .split(',')
                .collect { it.trim() }
                .findAll { it }
        def isStrictModule = strictModules.contains(subproject.name)

        subproject.pluginManager.apply('jacoco')
        subproject.pluginManager.apply('com.github.spotbugs')
        subproject.pluginManager.apply('checkstyle')
        subproject.pluginManager.apply('pmd')

        subproject.extensions.configure(JavaPluginExtension) { javaExt ->
            javaExt.toolchain {
                languageVersion = JavaLanguageVersion.of(21)
            }
            javaExt.withSourcesJar()
            javaExt.withJavadocJar()
        }

        subproject.extensions.configure(JacocoPluginExtension) { jacocoExt ->
            jacocoExt.toolVersion = backendProject.ext.jacocoVer.get()
        }

        tasks.withType(Test).configureEach {
            useJUnitPlatform()
            testLogging {
                events 'passed', 'skipped', 'failed'
                exceptionFormat = TestExceptionFormat.FULL
            }
            finalizedBy(tasks.named('jacocoTestReport'))
            // 커버리지 게이트(라인 90%, 브랜치 75%)가 항상 실행되도록 테스트 후 검증까지 연결
            finalizedBy(tasks.named('jacocoTestCoverageVerification'))
        }

        def mainSourceSet = subproject.extensions.getByType(JavaPluginExtension).sourceSets.named('main').get()

        tasks.named('jacocoTestReport').configure { JacocoReport report ->
            dependsOn tasks.named('test')
            reports {
                xml.required = true
                html.required = true
            }
            report.classDirectories.setFrom(
                    mainSourceSet.output.classesDirs.asFileTree.matching {
                        exclude backendProject.ext.jacocoGlobalExcludes
                    }
            )
        }

        tasks.withType(JacocoCoverageVerification).configureEach { JacocoCoverageVerification verification ->
            verification.dependsOn tasks.named('test')
            verification.classDirectories.setFrom(
                    mainSourceSet.output.classesDirs.asFileTree.matching {
                        exclude backendProject.ext.jacocoGlobalExcludes
                    }
            )

            verification.violationRules {
                // 전역 BUNDLE 기준 (프로젝트 가이드: 라인 80%)
                rule {
                    element = 'BUNDLE'
                    limit { counter = 'LINE';   value = 'COVEREDRATIO'; minimum = 0.80 }
                    limit { counter = 'BRANCH'; value = 'COVEREDRATIO'; minimum = 0.75 }
                }
                // CLASS 기준 (DTO 등 최소 예외는 classDirectories에서 이미 제외)
                rule {
                    element = 'CLASS'
                    enabled = true
                    limit { counter = 'LINE'; value = 'COVEREDRATIO'; minimum = 0.80 }
                }
                // 핵심 패키지 브랜치 기준
                rule {
                    element = 'PACKAGE'
                    enabled = true
                    includes = [
                        // 핵심 비즈니스 로직 - 도메인 계층
                        'com.example.admin.permission.*',
                        'com.example.admin.approval.*',
                        'com.example.admin.organization.*',
                        'com.example.admin.masking.*',
                        'com.example.approval.domain.*',
                        'com.example.approval.application.*',
                        'com.example.draft.domain.*',
                        'com.example.draft.application.*',
                        'com.example.auth.domain.*',
                        'com.example.auth.security.*',
                        'com.example.auth.strategy.*',
                        'com.example.file.storage.*',
                        'com.example.file.port.*',
                        'com.example.dw.application.*',
                        // 공통 핵심 로직
                        'com.example.common.security.*',
                        'com.example.common.policy.*',
                        'com.example.common.masking.*'
                    ]
                    excludes = [
                        // 인프라/설정 패키지
                        '*.config.*',
                        '*.dto.*',
                        '*.infra.*',
                        'com.example.common.jpa.*',
                        'com.example.common.util.*',
                        'com.example.common.cache.*',
                        'com.example.server.cache.*',
                        'com.example.audit.infra.*'
                    ]
                    limit { counter = 'BRANCH'; value = 'COVEREDRATIO'; minimum = 0.80 }
                }
            }
        }

        tasks.named('check').configure {
            dependsOn tasks.withType(JacocoCoverageVerification)
        }

        // SpotBugs 설정
        subproject.extensions.configure(com.github.spotbugs.snom.SpotBugsExtension) { spotbugsExt ->
            spotbugsExt.toolVersion = backendProject.ext.quality.spotbugsVersion
            spotbugsExt.effort = com.github.spotbugs.snom.Effort.MAX
            spotbugsExt.reportLevel = com.github.spotbugs.snom.Confidence.MEDIUM
            if (backendProject.file(backendProject.ext.qualityConfig.spotbugsExclude).exists()) {
                spotbugsExt.excludeFilter = backendProject.file(backendProject.ext.qualityConfig.spotbugsExclude)
            } else {
                logger.lifecycle("SpotBugs exclude filter 미존재: ${backendProject.ext.qualityConfig.spotbugsExclude} (필요 시 생성)")
            }
            // 기본은 무시, strictModules에 포함된 모듈만 게이트
            spotbugsExt.ignoreFailures = isStrictModule ? (project.findProperty('spotbugsIgnoreFailures') ?: 'false').toBoolean()
                                                        : true
        }

        tasks.withType(com.github.spotbugs.snom.SpotBugsTask).configureEach { com.github.spotbugs.snom.SpotBugsTask t ->
            t.enabled = isStrictModule || (project.findProperty('spotbugsRunAll') ?: 'false').toBoolean()
            t.reports { xml.required = true; html.required = true }
            if (backendProject.file(backendProject.ext.qualityConfig.spotbugsExclude).exists()) {
                t.excludeFilter.set(backendProject.file(backendProject.ext.qualityConfig.spotbugsExclude))
            }
            if (t.name.toLowerCase().contains('test')) {
                // 테스트 소스에 대해서는 SpotBugs를 임시 비활성화
                t.enabled = false
            }
            t.setClasses(
                    mainSourceSet.output.classesDirs.asFileTree.matching {
                        exclude backendProject.ext.qualityGlobalExcludes
                    }
            )
        }

        // Checkstyle 설정 (Google Style) - 초기 도입 시 편의 위해 ignoreFailures 기본 true
        subproject.extensions.configure(org.gradle.api.plugins.quality.CheckstyleExtension) { checkstyleExt ->
            checkstyleExt.toolVersion = backendProject.ext.quality.checkstyleVersion
            checkstyleExt.ignoreFailures = isStrictModule ? (project.findProperty('checkstyleIgnoreFailures') ?: 'false').toBoolean()
                                                          : true
            checkstyleExt.config = resources.text.fromFile(backendProject.file('config/checkstyle/google_checks.xml'))
        }

        tasks.withType(Checkstyle).configureEach {
            it.enabled = isStrictModule || (project.findProperty('checkstyleRunAll') ?: 'false').toBoolean()
            it.exclude backendProject.ext.qualityGlobalExcludes
            it.reports { html.required = true; xml.required = false }
        }

        // PMD 설정
        // PMD 표준 룰셋 적용 (기본 카테고리) - 초기 도입 시 ignoreFailures 기본 true
        subproject.extensions.configure(org.gradle.api.plugins.quality.PmdExtension) { pmdExt ->
            pmdExt.toolVersion = backendProject.ext.quality.pmdVersion
            pmdExt.ruleSetFiles = files() // 직접 파일 미사용
            // A안: 최소 규칙 세트로 축소하여 우선 통과 (필요 시 점진 확대)
            pmdExt.ruleSets = [
                    'category/java/bestpractices.xml',
                    'category/java/errorprone.xml'
            ]
            pmdExt.consoleOutput = true
            pmdExt.ignoreFailures = isStrictModule ? (project.findProperty('pmdIgnoreFailures') ?: 'false').toBoolean()
                                                   : true
            pmdExt.incrementalAnalysis = false
        }

        tasks.withType(Pmd).configureEach {
            it.enabled = (isStrictModule || (project.findProperty('pmdRunAll') ?: 'false').toBoolean()) && !it.name.toLowerCase().contains('test')
            it.exclude backendProject.ext.qualityGlobalExcludes
            it.reports { xml.required = true; html.required = true }
        }

        // SpotBugs가 check에 자동 연결되지 않는 Gradle/플러그인 조합을 대비해 명시 연결
        tasks.named('check').configure {
            dependsOn tasks.withType(com.github.spotbugs.snom.SpotBugsTask)
        }
    }
}

// SonarQube + JaCoCo 연동 (루트 전용, 주로 CI에서 실행)
sonarqube {
    properties {
        property 'sonar.projectKey', findProperty('sonarProjectKey') ?: 'TODO_REPLACE_WITH_PROJECT_KEY'
        property 'sonar.projectName', findProperty('sonarProjectName') ?: 'clear-reg-backend'
        property 'sonar.projectVersion', findProperty('sonarProjectVersion') ?: '0.0.1-SNAPSHOT'
        property 'sonar.host.url', findProperty('sonarHostUrl') ?: 'https://sonar.example.com' // TODO: 실제 서버 URL로 교체
        property 'sonar.sourceEncoding', 'UTF-8'

        def jacocoXmlReports = subprojects.collect { new File(it.buildDir, 'reports/jacoco/test/jacocoTestReport.xml') }
        property 'sonar.coverage.jacoco.xmlReportPaths', jacocoXmlReports.join(',')

        def sonarToken = System.getenv('SONAR_TOKEN')
        if (sonarToken) {
            property 'sonar.token', sonarToken
        } else {
            logger.lifecycle('SonarQube 토큰이 설정되지 않았습니다. CI 시크릿 또는 환경 변수 SONAR_TOKEN을 설정하세요.')
        }
    }
}

// SonarQube 실행 전에 모든 모듈의 JaCoCo 리포트 생성
tasks.named('sonarqube').configure {
    dependsOn subprojects.collect { it.tasks.matching { task -> task.name == 'jacocoTestReport' } }.flatten()
}
